# innit

./: .gitignore  DATA_SOURCES.md  MANIFEST.in  Makefile  README.md  benchmark_backends.py  compare_fixed.py  compare_implementations.py  debug_step_by_step.py  debug_tinygrad.py  eval_innit.py  export_onnx.py  innit_challenge_set_v11.json  innit_detector.py  pyproject.toml  test_batchnorm.py  test_conv_layer.py  test_english.txt  test_french.txt  test_linear.py  test_raw_logits.py  train_innit.py  train_innit_v2.py  train_simple.py
.github/workflows/: ci.yml  publish.yml  release.yml
innit/: __init__.py  assets.py  client.py  detector.py  tinygrad_fixed_impl.py  tinygrad_impl.py
innit-model/: README.md  config.json  model_info.json
tests/: conftest.py  test_parity_optional.py  test_tinygrad_smoke.py
